updates for ICU website

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,14 +36,17 @@
         <div class="block">
           <div class="section-title">
             <h2>{{ .title | markdownify }}</h2>
-            <p>{{ .description | markdownify }}</p>
           </div>
-          <p>{{ .content | markdownify }}</p>
+          <p>{{ .abstract | markdownify }}</p>
+          <h3> Aims </h3>
+          <p>{{ .aims | markdownify }}</p>
+          <h3> Papers </h3>
+          <p>{{ .papers | markdownify }}</p>
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
         <div class="block">
-          <img src="{{ .image | relURL }}" class="img-responsive" alt="Img">
+          <img src="{{ .image | relURL }}" class="img-responsive" alt="<IMAGE HERE?>">
         </div>
       </div>
     </div>
@@ -75,21 +78,21 @@
 {{ end }}
 {{ end }}
 
-<!-- Service -->
+<!-- Service 
 {{ if $data.homepage.service.enable }}
 {{ partial "service.html" . }}
-{{ end }}
-<!-- /service -->
+{{ end }} -->
 
-<!-- Call to action -->
+<!-- Call to action 
 {{ if $data.homepage.cta.enable }}
 {{ partial "cta.html" . }}
 {{ end }}
-<!-- /Call to action -->
+-->
 
+
+<!--
 {{ if $data.homepage.funfacts.enable }}
 {{ with $data.homepage.funfacts }}
-<!-- Content Start -->
 <section class="testimonial">
   <div class="container">
     <div class="row">
@@ -133,5 +136,7 @@
 </section>
 {{ end}}
 {{ end}}
+-->
+
 
 {{ end }}
