--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -265,6 +265,12 @@ input[type="tel"] {
   }
 }
 
+code {
+  color: #333;
+  background-color: #f5f5f5;
+
+}
+
 
 .section-subtitle {
   font-size: 28px;
@@ -273,9 +279,8 @@ input[type="tel"] {
 
 }
 
-
 .page-title {
-  padding: 100px 0;
+  padding: 50px 0;
   @extend .overly;
 
   .block {
@@ -283,7 +288,7 @@ input[type="tel"] {
 
     h1 {
       color: $light;
-      font-weight: 200;
+      font-weight: 250;
       letter-spacing: 6px;
       margin-top: 0;
       text-transform: capitalize;
@@ -587,7 +592,7 @@ input[type="tel"] {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #1d192c;
+    background: #3613b6;
     opacity: 0.8;
   }
 }
