--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,8 +40,12 @@
           <p>{{ .abstract | markdownify }}</p>
           <h3> Aims </h3>
           <p>{{ .aims | markdownify }}</p>
-          <h3> Papers </h3>
-          <p>{{ .papers | markdownify }}</p>
+          <h3> Implementation </h3>
+          <p>{{ .implementation | markdownify }}</p>
+          <h3> Funding </h3>
+          <p>{{ .funding | markdownify }}</p>
+          <h3> Publications </h3>
+          <p>{{ .publications | markdownify }}</p>
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
