--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,7 +13,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}">
-              <img src="{{ site.Params.logo | absURL }}" alt="{{ site.Title }}" class="img-responsive">
+              <!-- {{ site.Title}} -->
             </a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
