--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -7,13 +7,13 @@
     <div class="row">
       <div class="col-md-8">
         {{ range .Data.Pages }}
-        <div class="post">
-            <div  class="col-md-8 col-md-offset-2" style="width: 100%;">
-              <div style="float: left; margin-right: 20px"> 
+        <div class="row" >
+            <div class="col-md-8 col-md-offset-2" style="width: 100%; margin-top: 40px;">
+              <div style="float: left; margin-right: 20px;"> 
                 <figure>
                   {{ if .Params.Photo }}
                   <img style="border-radius: 10%; max-width:200px; " class="img-fluid" src="{{ .Params.Photo | relURL }}">
-                  {{else if .Params.Email}}
+                  {{else}}
                   <img style="border-radius: 10%;" class="img-fluid"
                     src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=128&pg&d=identicon">
                   {{ end }}
@@ -22,10 +22,16 @@
 
               <div> 
                 <h3 class="post-title"><a> {{ .Title }}</a></h3>
-                <p>{{ .Params.Email }}</p>
+                <p> {{ .Params.Role }} </p>
                 <div class="post-content">
                   <p>{{ .Summary }}</p>
                 </div>
+                <ul class="list-inline">
+                  {{ range .Params.Social }}
+                  <li class="list-inline-item"><a class="share-icon bg-secondary" href="{{ .link | safeURL}}"><i
+                        class="{{ .icon }}"></i></a></li>
+                  {{ end }}
+                </ul>
               </div>
             </div>
 
